[project]
name = "text2ink"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agno>=2.3.26",
    "fitz>=0.0.1.dev2",
    "numpy>=2.3.4",
    "openai>=2.15.0",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.2.1",
]
